Footer: replaced fixed gaps with space-between for flexible resizing

--- a/footer/__buro-link/footer__buro-link.css
+++ b/footer/__buro-link/footer__buro-link.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   cursor: pointer;
+  margin-left: auto;
 }
 
 @media screen and (max-width: 856px) {
