--- a/footer/__column/footer__column.css
+++ b/footer/__column/footer__column.css
@@ -3,4 +3,6 @@
   padding: 0;
   box-sizing: border-box;
   display: block;
+  max-width: 160px;
+  flex-basis: 160px;
 }
