--- a/footer/__legal-text/footer__legal-text.css
+++ b/footer/__legal-text/footer__legal-text.css
@@ -2,9 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  margin-right: 361px;
   width: 404px;
-  color: #A0ABB5;
+  color: #a0abb5;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.15px;
