--- a/footer/__logo-zone/footer__logo-zone.css
+++ b/footer/__logo-zone/footer__logo-zone.css
@@ -3,8 +3,10 @@
   padding: 0;
   box-sizing: border-box;
   display: flex;
-  gap: 63px;
+  justify-content: space-between;
   list-style: none;
+  max-width: 800px;
+  width: 100%;
 }
 
 @media screen and (max-width: 856px) {
