--- a/footer/footer.css
+++ b/footer/footer.css
@@ -2,9 +2,8 @@
   margin: 0;
   padding: 64px 0 72px 0;
   box-sizing: border-box;
-  min-width: 1120px;
   height: 624px;
-  font-family: 'Helvetica', Arial, sans-serif;
+  font-family: "Helvetica", Arial, sans-serif;
   font-weight: 400;
   background-color: #374045;
 }
